// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > it works with level 1`] = `
<span
  class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-medium_b26e6e _this_2dd11e _level-primary_2dd11e"
  data-testid="Tag"
>
  <div
    class="_this_d62db4 _elevation-small_d62db4 _roundness-none_d62db4 _gutter-none_d62db4 _gutterX-medium_d62db4 _gutterY-small_d62db4 _children_2dd11e"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;

exports[`Tag > it works with level 2`] = `
<span
  class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-medium_b26e6e _this_2dd11e _level-secondary_2dd11e"
  data-testid="Tag"
>
  <div
    class="_this_d62db4 _elevation-small_d62db4 _roundness-none_d62db4 _gutter-none_d62db4 _gutterX-medium_d62db4 _gutterY-small_d62db4 _children_2dd11e"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;

exports[`Tag > it works with level 3`] = `
<span
  class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-medium_b26e6e _this_2dd11e _level-tertiary_2dd11e"
  data-testid="Tag"
>
  <div
    class="_this_d62db4 _elevation-small_d62db4 _roundness-none_d62db4 _gutter-none_d62db4 _gutterX-medium_d62db4 _gutterY-small_d62db4 _children_2dd11e"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;

exports[`Tag > it works with level 4`] = `
<span
  class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-medium_b26e6e _this_2dd11e _level-danger_2dd11e"
  data-testid="Tag"
>
  <div
    class="_this_d62db4 _elevation-small_d62db4 _roundness-none_d62db4 _gutter-none_d62db4 _gutterX-medium_d62db4 _gutterY-small_d62db4 _children_2dd11e"
    data-testid="Box"
  >
    Hello world
  </div>
</span>
`;
